--- a/backend_api/Dockerfile
+++ b/backend_api/Dockerfile
@@ -6,3 +6,9 @@ COPY requirements.txt .
 RUN pip install --no-cache-dir -r requirements.txt
 
 COPY . .
+
+# ENV PYTHONPATH=/app
+
+EXPOSE 5000
+
+CMD ["sh", "-c", "python init_admin.py && python app.py"]
